--- a/.forceignore
+++ b/.forceignore
@@ -10,3 +10,6 @@ package.xml
 
 # LWC Jest
 **/__tests__/**
+
+sfdx-project/main/default/profiles/Admin.profile
+sfdx-project/main/default/profiles/Admin.profile-meta.xml
